# pywddff

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_OLD.md  atrousdwt.py  coefs.py  filters.py  modwt.py  multi_stationary_dwt.py  pyproject.toml  requirements.txt  utils.py
docs/: Makefile  conf.py  example-1.ipynb  example.ipynb  index.md  make.bat  requirements.txt
pywddff/: __init__.py  coefs.py  filters.py  scaling_dict.pkl  stationary_dwt.py  utils.py
src/pywddff/: __init__.py  coefs.py  datasets.py  filters.py  pywddff.py  utils.py
src/pywddff/data/: wavelet_dict.pkl
tests/: test_pywddff.py
